k8s-blue-green-spring-petclinic/k8s/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-blue 
  namespace: petclinic
  labels:
    app: petclinic
    version: blue 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic
      version: blue
  template:
    metadata:
      labels:
        app: petclinic
        version: blue
    spec:
      containers:
        - name: petclinic
          image: jyotsna2181/petclinic:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "300m" 
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
