k8s-blue-green-spring-petclinic/k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: petclinic
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: petclinic
spec:
  selector:
    app: mysql
  ports:
    - port: 80
      targetPort: 3306
